# LeNet-5

./: .gitmodules  CMakeLists.txt  README.md  SConstruct  conv_compile.sh  fcnn_compile.sh  lenet_dynamic_library.sh  mnist_compile.sh  run_lenet5_test.sh  run_lenet5_train.sh  run_lenet5_train_and_test.sh  test_lenet5.cpp  test_lenet5.sh  train_and_evaluate_lenet5.cpp  train_and_evaluate_lenet5.sh  train_lenet5.cpp  train_lenet5.sh
conf/: lenet5_flagfile_configure  lenet5_flagfile_configure~
include/: convolutional_layer.h  filter.h  full_connected_layer.h  lenet.h  max_pooling_layer.h  neural_network.h  read_mnist.h
src/: convolutional_layer.cpp  filter.cpp  full_connected_layer.cpp  lenet.cpp  max_pooling_layer.cpp  neural_network.cpp
tools/: read_mnist.cpp  read_mnist.cpp~
